--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.5",
+    "axios": "^0.26.0",
     "clsx": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jwt": "^1.1.4",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
