--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jwt": "^1.1.4",
