--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,5 +1,6 @@
 # Dockerfile for React client
 
+# Stage 1
 # Build react client
 FROM node:17-alpine
 
@@ -11,14 +12,17 @@ COPY package*.json ./
 ###  Installing dependencies
 RUN npm install --silent
 
-# Give permission to access node_modules
-# RUN mkdir -p node_modules/.cache && chmod -R 777 node_modules/.cache
 
 # copy local files to app folder
 COPY . .
 
 RUN npm run build
 
+# Stage 2
+FROM nginx:1.17.0-alpine
+
+COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
+
 EXPOSE 3000
 
-CMD ["pm2","serve", "build", "3000", "--spa"]
+CMD nginx -g 'daemon off;'
