--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "jsonwebtoken": "^8.5.1",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-jwt": "^1.1.4",
     "react-quill": "^2.0.0-beta.4",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.4",
     "sass": "^1.48.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
@@ -58,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-csv": "^1.1.2",
     "mini-css-extract-plugin": "2.4.5"
   }
 }
