--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,12 +5,15 @@
 FROM node:17-alpine
 
 # Working directory be app
-WORKDIR /usr/src/app
+RUN mkdir -p /usr/src/app/
+WORKDIR /usr/src/app/
+ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
-COPY package*.json ./
 
 ###  Installing dependencies
+COPY package*.json ./
 RUN npm install --silent
+RUN npm install react-scripts@4.0.1 -g
 
 
 # copy local files to app folder
@@ -20,9 +23,7 @@ RUN npm run build
 
 # Stage 2
 FROM nginx:1.17.0-alpine
-
-COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
-
+RUN rm -rf /usr/share/nginx/html/*
+COPY --from=builder /usr/src/app/build /usr/share/nginx/html
 EXPOSE 3000
-
-CMD nginx -g 'daemon off;'
+CMD ["nginx", "-g", "daemon off;"]
