--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-to-print": "^2.14.4",
+    "redocx": "^1.1.4",
     "sass": "^1.48.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
