--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.5",
     "react-jwt": "^1.1.4",
     "react-quill": "^2.0.0-beta.4",
     "react-router": "^6.2.1",
