--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.3.0",
     "@mui/x-data-grid": "^5.5.1",
@@ -18,6 +19,7 @@
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "ajv-errors": "^1.0.1",
     "antd": "^4.18.5",
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
@@ -68,6 +70,6 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
     "@types/react-csv": "^1.1.2",
-    "mini-css-extract-plugin": "2.4.5"
+    "mini-css-extract-plugin": "2.4.4"
   }
 }
