--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.5",
+    "react-highlight-words": "^0.18.0",
     "react-jwt": "^1.1.4",
     "react-quill": "^2.0.0-beta.4",
     "react-router": "^6.2.1",
@@ -70,6 +71,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
     "@types/react-csv": "^1.1.2",
+    "@types/react-highlight-words": "^0.16.4",
     "mini-css-extract-plugin": "2.4.4"
   }
 }
