math formula with quill working properly

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.72",
-    "@mui/x-data-grid": "^5.5.1",
     "@mui/material": "^5.3.0",
+    "@mui/x-data-grid": "^5.5.1",
     "@mui/x-data-grid-generator": "^5.5.1",
     "@mui/x-data-grid-pro": "^5.3.0",
     "@progress/kendo-react-pdf": "^5.1.0",
@@ -28,6 +28,8 @@
     "file-saver": "^2.0.5",
     "html-docx-js-typescript": "^0.1.5",
     "jsonwebtoken": "^8.5.1",
+    "katex": "^0.16.2",
+    "mathjax": "^3.2.2",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.2",
     "react-csv": "^2.2.2",
@@ -35,6 +37,7 @@
     "react-dropzone": "^12.0.5",
     "react-highlight-words": "^0.18.0",
     "react-jwt": "^1.1.4",
+    "react-katex": "^3.0.1",
     "react-quill": "^2.0.0-beta.4",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
