--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
+    "@types/katex": "^0.14.0",
     "@types/react-csv": "^1.1.2",
     "@types/react-highlight-words": "^0.16.4",
     "mini-css-extract-plugin": "2.4.4"
