--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/x-data-grid": "^5.5.1",
     "@mui/x-data-grid-generator": "^5.5.1",
     "@mui/x-data-grid-pro": "^5.3.0",
+    "@mui/x-date-pickers-pro": "^5.0.6",
     "@progress/kendo-react-pdf": "^5.1.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -24,6 +25,7 @@
     "antd": "^4.18.5",
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
+    "dayjs": "^1.11.6",
     "docx": "^7.3.0",
     "file-saver": "^2.0.5",
     "html-docx-js-typescript": "^0.1.5",
@@ -46,6 +48,7 @@
     "redocx": "^1.1.4",
     "sass": "^1.48.0",
     "typescript": "^4.5.4",
+    "uninstall": "*",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -76,6 +79,7 @@
     "@types/file-saver": "^2.0.5",
     "@types/katex": "^0.14.0",
     "@types/react-csv": "^1.1.2",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-highlight-words": "^0.16.4",
     "mini-css-extract-plugin": "2.4.4"
   }
