--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ajv-errors": "^1.0.1",
     "antd": "^4.18.5",
     "axios": "^0.26.0",
+    "chart.js": "^3.9.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.11.6",
     "docx": "^7.3.0",
@@ -34,6 +35,7 @@
     "mathjax": "^3.2.2",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.3.1",
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.5",
