--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "react-quill": "^2.0.0-beta.4",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
     "react-to-print": "^2.14.4",
     "redocx": "^1.1.4",
     "sass": "^1.48.0",
@@ -54,10 +53,9 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite --host",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -83,6 +81,11 @@
     "@types/react-csv": "^1.1.2",
     "@types/react-date-range": "^1.4.4",
     "@types/react-highlight-words": "^0.16.4",
-    "mini-css-extract-plugin": "2.4.4"
+    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "mini-css-extract-plugin": "2.4.4",
+    "vite": "^3.2.3",
+    "vite-plugin-env-compatible": "^1.1.1",
+    "vite-plugin-svgr": "^2.2.2"
   }
 }
