--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "sass": "^1.48.0",
     "typescript": "^4.5.4",
     "uninstall": "*",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "zod": "^3.20.2"
   },
   "scripts": {
     "start": "vite --host",
