--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "chart.js": "^3.9.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.11.6",
-    "docx": "^7.3.0",
+    "docx": "^7.8.2",
+    "docx2html": "^1.3.2",
+    "docxtemplater": "^3.34.2",
     "file-saver": "^2.0.5",
     "html-docx-js-typescript": "^0.1.5",
     "jsonwebtoken": "^8.5.1",
+    "jszip": "^3.10.1",
     "katex": "^0.16.2",
     "mathjax": "^3.2.2",
+    "pizzip": "^3.1.4",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
