--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
     "chart.js": "^3.9.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.11.6",
-    "docx2html": "^1.3.2",
+    "docx-parser": "^0.2.1",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^8.5.1",
     "katex": "^0.16.2",
     "mathjax": "^3.2.2",
-    "pizzip": "^3.1.4",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
