--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-saver": "^2.0.5",
     "katex": "^0.16.2",
     "mathjax": "^3.2.2",
+    "moment": "^2.29.4",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
@@ -75,6 +76,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
     "@types/katex": "^0.14.0",
+    "@types/moment": "^2.13.0",
     "@types/react-csv": "^1.1.2",
     "@types/react-date-range": "^1.4.4",
     "@types/react-highlight-words": "^0.16.4",
